manifests/pre-prod/arangodb/arango-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beeze-arango-svc
  namespace: arangodb
spec:
  selector:
    arango_deployment: beeze-arango
    role: coordinator
  type: NodePort
  ports:
  - protocol: TCP
    port: 8529
    targetPort: 8529
