manifests/pre-prod/arangodb/arango-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: arango-ingress
  namespace: arangodb
  annotations:
    kubernetes.io/ingress.class: alb
    external-dns.alpha.kubernetes.io/hostname: arango.beeze.co
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: beeze-internal
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:851992239907:certificate/0c0f83c1-6b53-4ea1-b8dd-5e8bf29a9a8f
spec:
  rules:
  - host: arango.beeze.co
    http:
      paths:
      - backend:
          serviceName: beeze-arango-svc
          servicePort: 8529
        pathType: ImplementationSpecific
